[gd_scene load_steps=7 format=3 uid="uid://ck36dtnnd00sv"]

[ext_resource type="Script" uid="uid://b1ijbjy82862l" path="res://Scripts/LevelLogic/Level2--3.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://be6sbtmqr5d2f" path="res://Scenes/Systems/GridManager.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bwvb1vu8grrxw" path="res://Assets/Text/YouWin!.png" id="3"]
[ext_resource type="Texture2D" uid="uid://eo5su2er6ppt" path="res://Assets/Text/Continue.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dnkl6ya3o8p23" path="res://Assets/Text/PlayAgain.png" id="5"]
[ext_resource type="AudioStream" uid="uid://b2bnnssljo4uk" path="res://Assets/Audio/Win2.mp3" id="6"]


[node name="Level2->3" type="Node2D"]
script = ExtResource("1")

[node name="GridManager" parent="." instance=ExtResource("2")]

[node name="Continue" type="Button" parent="GridManager"]
offset_left = 342.0
offset_top = 199.0
offset_right = 555.0
offset_bottom = 229.0

[node name="Continue" type="Sprite2D" parent="GridManager/Continue"]
position = Vector2(100, 14)
texture = ExtResource("4")

[node name="PlayAgain" type="Button" parent="GridManager"]
offset_left = 342.0
offset_top = 236.0
offset_right = 555.0
offset_bottom = 274.0
icon = ExtResource("5")

[node name="YouWin!" type="Sprite2D" parent="."]
position = Vector2(447, 148)
scale = Vector2(5, 5)
texture = ExtResource("3")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")
autoplay = true

[connection signal="pressed" from="GridManager/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="GridManager/PlayAgain" to="." method="_on_PlayAgain_pressed"]
